# procon_rs

./: Cargo.toml  README.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  template.rs
src/commands/: new.rs
templates/default/: .gitignore  CMakeLists.txt  main.cpp
tests/: config_test.rs  error_test.rs  new_command_test.rs  template_test.rs
